--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,12 @@ select:focus {
   border: 1px solid var(--color-dark);
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 form .button {
   margin-top: 0.6rem;
   grid-column: 2;
